--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=8000
-MONGO_URI=mongodb+srv://kazuki:89827156@trail-101.9qewedx.mongodb.net/?retryWrites=true&w=majority&appName=trail-101
+MONGODB_URI=mongodb+srv://kazuki:89827156@trail-101.9qewedx.mongodb.net/?retryWrites=true&w=majority&appName=trail-101
+
