--- a/cpp/makefile
+++ b/cpp/makefile
@@ -1,28 +1,26 @@
 CXX = g++
-CXXFLAGS = -std=c++17 -Iinclude
-
-SRCDIR = src
-OBJDIR = build
-TARGET = app
+CXXFLAGS = -std=c++17 -Iinclude -I/usr/include/jsoncpp
+LDFLAGS = -lcurl -ljsoncpp
+SRCS = src/main.cpp src/Book.cpp
+OBJS = $(SRCS:.cpp=.o)
+EXEC = myprogram
 
 # Default target
-all: run
+all: clean $(EXEC) run
 
-$(TARGET): $(OBJDIR)/Book.o $(OBJDIR)/Library.o $(OBJDIR)/main.o
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJDIR)/*.o
+# Build the executable
+$(EXEC): $(OBJS)
+	$(CXX) $(OBJS) -o $(EXEC) $(LDFLAGS)
 
-$(OBJDIR)/Book.o: $(SRCDIR)/Book.cpp
-	$(CXX) $(CXXFLAGS) -c $(SRCDIR)/Book.cpp -o $(OBJDIR)/Book.o
+# Compile .cpp files to .o files
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-$(OBJDIR)/Library.o: $(SRCDIR)/Library.cpp
-	$(CXX) $(CXXFLAGS) -c $(SRCDIR)/Library.cpp -o $(OBJDIR)/Library.o
-
-$(OBJDIR)/main.o: $(SRCDIR)/main.cpp
-	$(CXX) $(CXXFLAGS) -c $(SRCDIR)/main.cpp -o $(OBJDIR)/main.o
-
-run: $(TARGET)
-	./$(TARGET)
-
+# Clean build artifacts
 clean:
-	rm -f $(OBJDIR)/*.o $(TARGET)
+	rm -f $(OBJS) $(EXEC)
+
+# Run the executable
+run: $(EXEC)
+	./$(EXEC)
 
